--- a/WolvenKit/Views/Editor/Tools/CR2WToTextToolView.xaml
+++ b/WolvenKit/Views/Editor/Tools/CR2WToTextToolView.xaml
@@ -3,8 +3,7 @@
  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
  xmlns:catel="http://schemas.catelproject.com"
- xmlns:hc="https://handyorg.github.io/handycontrol"
- IsVisibleChanged="UserControl_IsVisibleChanged">
+ xmlns:hc="https://handyorg.github.io/handycontrol">
     <catel:UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
