--- a/WolvenKit/Views/Shell/MainView.xaml
+++ b/WolvenKit/Views/Shell/MainView.xaml
@@ -1,43 +1,39 @@
 <catel:UserControl
-     x:Class="WolvenKit.Views.Shell.MainView"
-     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-     xmlns:ad="clr-namespace:WolvenKit.Functionality.Layout"
-     xmlns:audiotoolz="clr-namespace:WolvenKit.Views.Editor.AudioTool"
-     xmlns:catel="http://schemas.catelproject.com"
-     xmlns:converters="clr-namespace:WolvenKit.Functionality.Converters;assembly=WolvenKit.App"
-     xmlns:cr2weditor1="clr-namespace:WolvenKit.Views.Editor"
-     xmlns:editor="clr-namespace:WolvenKit.Views.Editor"
-     xmlns:importertool1="clr-namespace:WolvenKit.Views.Editor"
-     xmlns:o="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
-     xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
-     xmlns:views1="clr-namespace:WolvenKit.Views.Editor"
-     xmlns:visualeditorz="clr-namespace:WolvenKit.Views.Editor.VisualEditor"
-     xmlns:shell="clr-namespace:WolvenKit.Views.Shell"
-     xmlns:shell1="clr-namespace:WolvenKit.ViewModels.Shell;assembly=WolvenKit.App"
-     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    IsVisibleChanged="UserControl_IsVisibleChanged_1"
-     >
+    x:Class="WolvenKit.Views.Shell.MainView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:ad="clr-namespace:WolvenKit.Functionality.Layout"
+    xmlns:audiotoolz="clr-namespace:WolvenKit.Views.Editor.AudioTool"
+    xmlns:catel="http://schemas.catelproject.com"
+    xmlns:converters="clr-namespace:WolvenKit.Functionality.Converters;assembly=WolvenKit.App"
+    xmlns:cr2weditor1="clr-namespace:WolvenKit.Views.Editor"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:editor="clr-namespace:WolvenKit.Views.Editor"
+    xmlns:importertool1="clr-namespace:WolvenKit.Views.Editor"
+    xmlns:o="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
+    xmlns:shell="clr-namespace:WolvenKit.Views.Shell"
+    xmlns:shell1="clr-namespace:WolvenKit.ViewModels.Shell;assembly=WolvenKit.App"
+    xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
+    xmlns:views1="clr-namespace:WolvenKit.Views.Editor"
+    xmlns:visualeditorz="clr-namespace:WolvenKit.Views.Editor.VisualEditor">
 
     <catel:UserControl.Resources>
         <DrawingBrush
-         x:Key="CloudDrawingBrushMain"
-         o:Freeze="True"
-         Opacity=".02"
-         RenderOptions.CacheInvalidationThresholdMaximum="2.0"
-         RenderOptions.CacheInvalidationThresholdMinimum="0.5"
-         RenderOptions.CachingHint="Cache"
-         Stretch="Uniform"
-         TileMode="Tile"
-         Viewport="0,0,90,90"
-         ViewportUnits="Absolute"
-         >
+            x:Key="CloudDrawingBrushMain"
+            o:Freeze="True"
+            Opacity=".02"
+            RenderOptions.CacheInvalidationThresholdMaximum="2.0"
+            RenderOptions.CacheInvalidationThresholdMinimum="0.5"
+            RenderOptions.CachingHint="Cache"
+            Stretch="Uniform"
+            TileMode="Tile"
+            Viewport="0,0,90,90"
+            ViewportUnits="Absolute">
             <DrawingBrush.Drawing>
                 <ImageDrawing
-                 o:Freeze="True"
-                 ImageSource="pack://application:,,,/Resources/Media/Images/Application/SeeTroughIcon.png"
-                 Rect="0,0,70,80"
-                 />
+                    o:Freeze="True"
+                    ImageSource="pack://application:,,,/Resources/Media/Images/Application/SeeTroughIcon.png"
+                    Rect="0,0,70,80" />
             </DrawingBrush.Drawing>
         </DrawingBrush>
     </catel:UserControl.Resources>
@@ -54,10 +50,7 @@
         <Grid />
 
 
-        <shell:DockingAdapter ItemsSource="{Binding Tools}"
-                              ActiveDocument="{Binding ActiveDocument,Mode=TwoWay}">
-
-        </shell:DockingAdapter>
+        <shell:DockingAdapter ActiveDocument="{Binding ActiveDocument, Mode=TwoWay}" ItemsSource="{Binding Tools}" />
 
 
 
