--- a/WolvenKit/Views/Wizards/PublishWizardView.xaml
+++ b/WolvenKit/Views/Wizards/PublishWizardView.xaml
@@ -4,8 +4,7 @@
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
  xmlns:catel="http://schemas.catelproject.com"
  xmlns:hc="https://handyorg.github.io/handycontrol"
- xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
- IsVisibleChanged="UserControl_IsVisibleChanged">
+ xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks">
 
     <catel:UserControl.Resources>
         <ResourceDictionary>
