--- a/WolvenKit/App.xaml
+++ b/WolvenKit/App.xaml
@@ -1,15 +1,14 @@
 <Application
- x:Class="WolvenKit.App"
- xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
- xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
- xmlns:hc="https://handyorg.github.io/handycontrol"
- xmlns:local="clr-namespace:WolvenKit.Views.Foundation"
- xmlns:o="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
- xmlns:viewmodels="clr-namespace:WolvenKit.ViewModels.Editor;assembly=WolvenKit.App"
- xmlns:views="clr-namespace:WolvenKit.Views.Editor"
- xmlns:views1="clr-namespace:WolvenKit.Views.Editor.VisualEditor"
- xmlns:vm="clr-namespace:WolvenKit.Views.ViewModels"
- >
+    x:Class="WolvenKit.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:hc="https://handyorg.github.io/handycontrol"
+    xmlns:local="clr-namespace:WolvenKit.Views.Foundation"
+    xmlns:o="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
+    xmlns:viewmodels="clr-namespace:WolvenKit.ViewModels.Editor;assembly=WolvenKit.App"
+    xmlns:views="clr-namespace:WolvenKit.Views.Editor"
+    xmlns:views1="clr-namespace:WolvenKit.Views.Editor.VisualEditor"
+    xmlns:vm="clr-namespace:WolvenKit.Views.ViewModels">
 
     <Application.Resources>
         <ResourceDictionary>
@@ -85,11 +84,7 @@
                         </Grid>
                     </DataTemplate>
 
-                    <DataTemplate DataType="{x:Type viewmodels:HexEditorViewModel}">
-                        <Grid>
-                            <views:HexEditorView />
-                        </Grid>
-                    </DataTemplate>
+                   
 
                     <DataTemplate DataType="{x:Type viewmodels:JournalEditorViewModel}">
                         <Grid>
@@ -210,10 +205,9 @@
             </ResourceDictionary.MergedDictionaries>
 
             <Style
-             x:Key="MessageBoxPrimaryButtonStyle"
-             BasedOn="{StaticResource {x:Type Button}}"
-             TargetType="Button"
-             >
+                x:Key="MessageBoxPrimaryButtonStyle"
+                BasedOn="{StaticResource {x:Type Button}}"
+                TargetType="Button">
                 <Setter Property="MinWidth" Value="88" />
                 <Setter Property="Visibility" Value="{Binding IsEnabled, RelativeSource={RelativeSource Self}, Converter={StaticResource Boolean2VisibilityConverter}}" />
                 <Setter Property="Margin" Value="5,0" />
@@ -221,23 +215,21 @@
             </Style>
 
             <DrawingBrush
-             x:Key="CloudDrawingBrush"
-             o:Freeze="True"
-             Opacity=".1"
-             RenderOptions.CacheInvalidationThresholdMaximum="2.0"
-             RenderOptions.CacheInvalidationThresholdMinimum="0.5"
-             RenderOptions.CachingHint="Cache"
-             Stretch="Uniform"
-             TileMode="Tile"
-             Viewport="0,0,157,157"
-             ViewportUnits="Absolute"
-             >
+                x:Key="CloudDrawingBrush"
+                o:Freeze="True"
+                Opacity=".1"
+                RenderOptions.CacheInvalidationThresholdMaximum="2.0"
+                RenderOptions.CacheInvalidationThresholdMinimum="0.5"
+                RenderOptions.CachingHint="Cache"
+                Stretch="Uniform"
+                TileMode="Tile"
+                Viewport="0,0,157,157"
+                ViewportUnits="Absolute">
                 <DrawingBrush.Drawing>
                     <ImageDrawing
-                     o:Freeze="True"
-                     ImageSource="pack://application:,,,/Resources/Media/Images/Application/Cloud.png"
-                     Rect="0,0,157,157"
-                     />
+                        o:Freeze="True"
+                        ImageSource="pack://application:,,,/Resources/Media/Images/Application/Cloud.png"
+                        Rect="0,0,157,157" />
                 </DrawingBrush.Drawing>
             </DrawingBrush>
 
