--- a/WolvenKit/Views/HomePage/Pages/SettingsPageView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/SettingsPageView.xaml
@@ -3,12 +3,19 @@
  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
  xmlns:catel="http://schemas.catelproject.com"
+ xmlns:feather="clr-namespace:Feather.Controls;assembly=Feather.Controls"
  xmlns:hc="https://handyorg.github.io/handycontrol"
  xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
  xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
  xmlns:sp="clr-namespace:WolvenKit.Views.HomePage.Pages"
  xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
+ xmlns:ucontrols="clr-namespace:WolvenKit.Controls;assembly=WolvenKit.App"
  >
+    <catel:UserControl.Resources>
+        <Style TargetType="CheckBox">
+            <Setter Property="HorizontalAlignment" Value="Left"/>
+        </Style>
+    </catel:UserControl.Resources>
 
     <Grid
      MinWidth="300"
@@ -16,7 +23,7 @@
      hc:ThemeManager.RequestedAccentColor="{DynamicResource MahApps.Brushes.Accent3}"
      Background="{DynamicResource MahApps.Brushes.ThemeBackground}"
      >
-        <Grid Margin="3,75,3,0">
+        <Grid x:Name="settingsGrid" Margin="3,75,3,0">
             <hc:TransitioningContentControl TransitionMode="Right2LeftWithFade">
 
                 <hc:TabControl
@@ -106,63 +113,26 @@
              x:Name="SfAccordion"
              VerticalAlignment="Stretch"
              Background="{DynamicResource RegionBrush}"
+             AccentBrush="{DynamicResource AccentBrush}"
+             IsTextSearchEnabled="True"
              Visibility="Visible"
              >
-
-                <syncfusion:SfAccordionItem Header="General">
-                    <StackPanel Margin="0">
-
+                <syncfusion:SfAccordionItem Header="General" Unselected="SfAccordionItem_Unselected">
+                    
+                    <StackPanel Orientation="Vertical">
                         <syncfusion:PropertyGrid
                          x:Name="GeneralSettingsPG"
                          CategoryForeground="{DynamicResource MahApps.Brushes.Accent}"
-                         EnableGrouping="True"
-                            
+                            EnableGrouping="True"
                          SelectedObject="{Binding generalSettingsPGModel}"
                          SortDirection="{x:Null}"
                          />
-
-
-                        <StackPanel Margin="5,5,0,5" Orientation="Horizontal">
-                            <TextBlock
-                             Margin="5,5,5,5"
-                             FontSize="11"
-                             Text="Theme Creator"
-                             />
-                            <mah:ColorPicker
-                             Width="250"
-                             HorizontalAlignment="Left"
-                             BorderBrush="Transparent"
-                             SelectedColor="{Binding SelectedTheme, Delay=100}"
-                             />
-                            <Button
-                             Margin="5,0,0,0"
-                             Content="Save Theme"
-                             FontSize="11"
-                             />
-                            <Button
-                             Margin="5,0,0,0"
-                             Content="Restart and Apply Theme"
-                             FontSize="11"
-                             />
-
-                        </StackPanel>
-                        <StackPanel Margin="5,5,0,5" Orientation="Horizontal">
-
-
-                            <TextBlock
-                             Margin="5,5,5,5"
-                             FontSize="11"
-                             Text="Current Theme"
-                             />
-                            <mah:ColorPicker
-                             Width="250"
-                             HorizontalAlignment="Left"
-                             BorderBrush="Transparent"
-                             IsEnabled="False"
-                             SelectedColor="Green"
-                             />
-                        </StackPanel>
-
+                        <TextBlock
+                         Margin="5"
+                         HorizontalAlignment="Center"
+                         Foreground="Gray"
+                         Text="Theme changes will take affect after restart."
+                         />
                     </StackPanel>
 
                 </syncfusion:SfAccordionItem>
@@ -171,7 +141,8 @@
                     <syncfusion:PropertyGrid
                      x:Name="EditorSettingsPG"
                      EnableGrouping="True"
-                     SelectedObject="{Binding demomodel}"
+                     SelectedObject="{Binding EditorSettingsPGModel}"
+                     CategoryForeground="{DynamicResource MahApps.Brushes.Accent}"
                      />
                 </syncfusion:SfAccordionItem>
 
@@ -179,16 +150,19 @@
                     <syncfusion:PropertyGrid
                      x:Name="ToolsSettingsPG"
                      EnableGrouping="True"
-                     SelectedObject="{Binding demomodel}"
+                     SelectedObject="{Binding ToolSettingsPGModel}"
                      />
                 </syncfusion:SfAccordionItem>
 
                 <syncfusion:SfAccordionItem Header="Cyberpunk 2077">
-                    <syncfusion:PropertyGrid
-                     x:Name="CP77SettingsPG"
-                     EnableGrouping="True"
-                     SelectedObject="{Binding cp77SettingsPGModel}"
-                     />
+                    <StackPanel>
+                        <syncfusion:PropertyGrid
+                         x:Name="CP77SettingsPG"
+                         EnableGrouping="True"
+                         SelectedObject="{Binding cp77SettingsPGModel}"
+                         CategoryForeground="{DynamicResource MahApps.Brushes.Accent}"
+                         />
+                    </StackPanel>
                 </syncfusion:SfAccordionItem>
 
                 <syncfusion:SfAccordionItem Header="The Witcher 3">
@@ -196,11 +170,29 @@
                      x:Name="TW3SettingsPG"
                      EnableGrouping="True"
                      SelectedObject="{Binding tw3SettingsPGModel}"
+                     CategoryForeground="{DynamicResource MahApps.Brushes.Accent}"
                      />
                 </syncfusion:SfAccordionItem>
 
             </syncfusion:SfAccordion>
+
         </Grid>
+        <hc:TransitioningContentControl TransitionMode="Left2RightWithFade">
+            <hc:SearchBar
+             x:Name="settingsSearch"
+             Margin="200,40,200,0"
+             HorizontalAlignment="Stretch"
+             VerticalAlignment="Top"
+             BorderBrush="{DynamicResource MahApps.Brushes.Accent}"
+             IsRealTime="True"
+             >
+                <hc:Interaction.Triggers>
+                    <hc:EventTrigger EventName="SearchStarted">
+                        <hc:EventToCommand Command="{Binding SearchStartedCommand}" PassEventArgsToCommand="True" />
+                    </hc:EventTrigger>
+                </hc:Interaction.Triggers>
+            </hc:SearchBar>
+        </hc:TransitioningContentControl>
         <hc:TransitioningContentControl TransitionMode="Right2LeftWithFade">
 
             <StackPanel
