--- a/WolvenKit/Views/Editor/Tools/ImportExportView.xaml
+++ b/WolvenKit/Views/Editor/Tools/ImportExportView.xaml
@@ -373,11 +373,14 @@
                 Margin="2"
                 Background="{DynamicResource ContentBackgroundAlt}">
                 <syncfusion:PropertyGrid
-                    DescriptionPanelVisibility="Visible"
                     ButtonPanelVisibility="Collapsed"
                     CategoryForeground="{DynamicResource MahApps.Brushes.Accent}"
+                    CollectionEditorOpening="PropertyGrid_CollectionEditorOpening"
+                    DescriptionPanelVisibility="Visible"
                     EnableGrouping="True"
-                    SelectedObject="{Binding SelectedObject.Properties, Mode=OneWay}" />
+                    PropertyExpandMode="NestedMode"
+                    SelectedObject="{Binding SelectedObject.Properties, Mode=OneWay}"
+                    SortDirection="{x:Null}" />
             </Grid>
 
         </Grid>
@@ -399,58 +402,125 @@
         </Grid>
 
 
+
+
+
+
         <!--  Overlay For File Selection  -->
         <Grid
+            x:Name="FileSelectingOverlay"
             Grid.RowSpan="4"
             Grid.ColumnSpan="4"
             Background="{DynamicResource ContentBackgroundAlt}"
             Visibility="Collapsed">
 
+            <syncfusion:TabControlExt>
+                <syncfusion:TabItemExt Header="Add Files">
+                    <Grid>
+                        <syncfusion:SfDataGrid x:Name="FileSelectionDataGrid" Margin="0,0,0,40" />
+                        <Border Margin="5" VerticalAlignment="Bottom">
+                            <Grid>
+                                <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
+                                    <!--  Cancel Button  -->
+                                    <Button
+                                        Height="30"
+                                        Margin="5,0,5,0"
+                                        Padding="5"
+                                        Click="CancelSelectingClick"
+                                        FontSize="12"
+                                        Style="{DynamicResource ButtonDefault}">
+                                        <StackPanel Orientation="Horizontal">
 
-            <syncfusion:SfDataGrid x:Name="FileSelectionDataGrid" Margin="0,0,0,40" />
-            <Border Margin="5" VerticalAlignment="Bottom">
-                <Grid>
-                    <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
-                        <!--  Cancel Button  -->
-                        <Button
-                            Height="30"
-                            Margin="5,0,5,0"
-                            Padding="5"
-                            FontSize="12"
-                            Style="{DynamicResource ButtonDefault}">
-                            <StackPanel Orientation="Horizontal">
-                                <iconPacks:PackIconCodicons
-                                    Width="13"
-                                    Height="13"
-                                    HorizontalAlignment="Center"
-                                    VerticalAlignment="Center"
-                                    Kind="Close" />
 
-                                <TextBlock Text="Cancel" />
-                            </StackPanel>
-                        </Button>
-                        <!--  Add Button  -->
-                        <Button
-                            Height="30"
-                            Margin="5,0,5,0"
-                            Padding="5"
-                            FontSize="12"
-                            Style="{DynamicResource ButtonDefault}">
-                            <StackPanel Orientation="Horizontal">
-                                <iconPacks:PackIconCodicons
-                                    Width="13"
-                                    Height="13"
-                                    HorizontalAlignment="Center"
-                                    VerticalAlignment="Center"
-                                    Kind="Add" />
+                                            <TextBlock Text="Cancel" />
+                                        </StackPanel>
+                                    </Button>
+                                    <!--  Add Button  -->
+                                    <Button
+                                        Height="30"
+                                        Margin="5,0,5,0"
+                                        Padding="5"
+                                        FontSize="12"
+                                        Style="{DynamicResource ButtonDefault}">
+                                        <StackPanel Orientation="Horizontal">
 
-                                <TextBlock Text="Add selected file" />
-                            </StackPanel>
-                        </Button>
 
-                    </StackPanel>
-                </Grid>
-            </Border>
+                                            <TextBlock Text="Add selected file" />
+                                        </StackPanel>
+                                    </Button>
+                                    <!--  Confirm Button  -->
+                                    <Button
+                                        Height="30"
+                                        Margin="5,0,5,0"
+                                        Padding="5"
+                                        FontSize="12"
+                                        Style="{DynamicResource ButtonDefault}">
+                                        <StackPanel Orientation="Horizontal">
+
+
+                                            <TextBlock Text="Confirm" />
+                                        </StackPanel>
+                                    </Button>
+
+                                </StackPanel>
+                            </Grid>
+                        </Border>
+                    </Grid>
+                </syncfusion:TabItemExt>
+                <syncfusion:TabItemExt Header="Selected Files">
+                    <Grid>
+                        <syncfusion:SfDataGrid x:Name="SelectedFilesGrid" Margin="0,0,0,40" />
+                        <Border Margin="5" VerticalAlignment="Bottom">
+                            <Grid>
+                                <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
+                                    <!--  Cancel Button  -->
+                                    <Button
+                                        Height="30"
+                                        Margin="5,0,5,0"
+                                        Padding="5"
+                                        Click="CancelSelectingClick"
+                                        FontSize="12"
+                                        Style="{DynamicResource ButtonDefault}">
+                                        <StackPanel Orientation="Horizontal">
+
+
+                                            <TextBlock Text="Cancel" />
+                                        </StackPanel>
+                                    </Button>
+                                    <!--  Renove Button  -->
+                                    <Button
+                                        Height="30"
+                                        Margin="5,0,5,0"
+                                        Padding="5"
+                                        FontSize="12"
+                                        Style="{DynamicResource ButtonDefault}">
+                                        <StackPanel Orientation="Horizontal">
+
+
+                                            <TextBlock Text="Remove selected file" />
+                                        </StackPanel>
+                                    </Button>
+                                    <!--  Confirm Button  -->
+                                    <Button
+                                        Height="30"
+                                        Margin="5,0,5,0"
+                                        Padding="5"
+                                        FontSize="12"
+                                        Style="{DynamicResource ButtonDefault}">
+                                        <StackPanel Orientation="Horizontal">
+
+
+                                            <TextBlock Text="Confirm" />
+                                        </StackPanel>
+                                    </Button>
+                                </StackPanel>
+                            </Grid>
+                        </Border>
+                    </Grid>
+                </syncfusion:TabItemExt>
+
+            </syncfusion:TabControlExt>
+
         </Grid>
 
 
