--- a/WolvenKit/Views/Editor/Tools/ImportExportView.xaml
+++ b/WolvenKit/Views/Editor/Tools/ImportExportView.xaml
@@ -2,17 +2,18 @@
     x:Class="WolvenKit.Views.Editor.ImportExportView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:I="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
     xmlns:catel="http://schemas.catelproject.com"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:editor="clr-namespace:WolvenKit.ViewModels.Editor;assembly=WolvenKit.App"
     xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+    xmlns:local="clr-namespace:WolvenKit"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:po="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
     xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
     d:DataContext="{d:DesignInstance Type=editor:ImportExportViewModel}"
     mc:Ignorable="d">
-
 
     <Grid>
         <Grid.RowDefinitions>
@@ -26,7 +27,6 @@
             <ColumnDefinition Width="1*" />
         </Grid.ColumnDefinitions>
 
-
         <!--  Main Grid  -->
         <Grid
             Grid.RowSpan="4"
@@ -36,9 +36,7 @@
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="*" />
                 <RowDefinition Height="80" />
-
             </Grid.RowDefinitions>
-
 
             <!--  Switch Views  -->
             <Grid Grid.Row="0" Background="{DynamicResource ContentBackgroundAlt2}">
@@ -55,7 +53,6 @@
                         Background="Transparent"
                         Content="EXPORTABLES"
                         IsChecked="True" />
-
                 </StackPanel>
             </Grid>
 
@@ -76,7 +73,16 @@
                 Visibility="{Binding Path=IsChecked, ElementName=ExportCheckBox, Converter={StaticResource boolToVisibilityConverter}}">
 
                 <syncfusion:SfDataGrid.Columns>
-                    <syncfusion:GridCheckBoxColumn HeaderText="#" MappingName="IsChecked" />
+                    <syncfusion:GridCheckBoxColumn HeaderText="#" MappingName="IsChecked">
+                        <syncfusion:GridCheckBoxColumn.HeaderTemplate>
+                            <DataTemplate>
+                                <CheckBox
+                                    Command="local:SFDataGridCommands.CheckAndUnCheck"
+                                    CommandParameter="{Binding ElementName=ExportGrid}"
+                                    IsChecked="{Binding Path=IsHeaderChecked}" />
+                            </DataTemplate>
+                        </syncfusion:GridCheckBoxColumn.HeaderTemplate>
+                    </syncfusion:GridCheckBoxColumn>
                     <syncfusion:GridTextColumn
                         AllowEditing="False"
                         ColumnSizer="Star"
@@ -90,11 +96,11 @@
                         HeaderText="Export Task"
                         HorizontalHeaderContentAlignment="Left"
                         MappingName="ExportTaskIdentifier" />
-
                 </syncfusion:SfDataGrid.Columns>
-
+                <I:Interaction.Behaviors>
+                    <local:Behaviour />
+                </I:Interaction.Behaviors>
             </syncfusion:SfDataGrid>
-
 
             <!--  Data Grid Imports  -->
             <syncfusion:SfDataGrid
@@ -129,11 +135,8 @@
                         HeaderText="Import Task"
                         HorizontalHeaderContentAlignment="Left"
                         MappingName="ExportTaskIdentifier" />
-
                 </syncfusion:SfDataGrid.Columns>
-
             </syncfusion:SfDataGrid>
-
 
             <!--  Bottom Button Panel Main  -->
 
@@ -206,10 +209,6 @@
                                 <TextBlock Text="Process All" />
                             </StackPanel>
                         </Button>
-
-
-
-
                     </StackPanel>
                     <StackPanel
                         Margin="0,5,0,5"
@@ -238,11 +237,6 @@
                             FontSize="12"
                             Text="{Binding CurrentSelectedInGridName}" />
                         <hc:Divider Orientation="Vertical" />
-
-
-
-
-
                     </StackPanel>
 
                     <StackPanel
@@ -266,7 +260,6 @@
                                     VerticalAlignment="Center"
                                     Kind="FilesOutline" />
                                 <TextBlock Text="Copy" />
-
                             </StackPanel>
                         </Button>
                         <TextBlock Text="settings from selected file to : " />
@@ -278,17 +271,11 @@
 
                             <syncfusion:ComboBoxItemAdv Content="Selected in Grid" />
                             <syncfusion:ComboBoxItemAdv Content="All in Grid" />
-
                         </syncfusion:ComboBoxAdv>
-
                     </StackPanel>
-
                 </StackPanel>
-
-
             </Grid>
         </Grid>
-
 
         <!--  Special Import / Export Options  -->
         <Grid
@@ -313,7 +300,6 @@
                     Margin="15,0,15,0"
                     VerticalAlignment="Center" />
 
-
                 <Border
                     Grid.Row="0"
                     Margin="5,0"
@@ -329,10 +315,6 @@
                         Text="EXTENSION" />
                 </Border>
 
-
-
-
-
                 <StackPanel
                     Grid.Row="1"
                     Margin="10,-15"
@@ -344,11 +326,7 @@
                             x:Name="XAML_AdvancedOptionsFileName"
                             FontSize="10"
                             Text="FileName" />
-
                     </StackPanel>
-
-
-
 
                     <CheckBox
                         Margin="3,0,0,0"
@@ -357,10 +335,7 @@
                         Content="Apply to all files of the same Extension"
                         FontSize="10"
                         Style="{DynamicResource MahApps.Styles.CheckBox.DataGrid}" />
-
                 </StackPanel>
-
-
 
                 <Button
                     Width="80"
@@ -389,9 +364,7 @@
                     SelectedObject="{Binding SelectedObject.Properties, Mode=OneWay}"
                     SortDirection="{x:Null}" />
             </Grid>
-
         </Grid>
-
 
         <!--  Exporting/Importing Overlay  -->
         <Grid
@@ -407,11 +380,6 @@
                 VerticalAlignment="Center"
                 Text="Files are being processed..." />
         </Grid>
-
-
-
-
-
 
         <!--  Overlay For File Selection  -->
         <Grid
@@ -438,7 +406,6 @@
                                         Style="{DynamicResource ButtonDefault}">
                                         <StackPanel Orientation="Horizontal">
 
-
                                             <TextBlock Text="Cancel" />
                                         </StackPanel>
                                     </Button>
@@ -450,7 +417,6 @@
                                         FontSize="12"
                                         Style="{DynamicResource ButtonDefault}">
                                         <StackPanel Orientation="Horizontal">
-
 
                                             <TextBlock Text="Add selected file" />
                                         </StackPanel>
@@ -464,11 +430,9 @@
                                         Style="{DynamicResource ButtonDefault}">
                                         <StackPanel Orientation="Horizontal">
 
-
                                             <TextBlock Text="Confirm" />
                                         </StackPanel>
                                     </Button>
-
                                 </StackPanel>
                             </Grid>
                         </Border>
@@ -490,7 +454,6 @@
                                         Style="{DynamicResource ButtonDefault}">
                                         <StackPanel Orientation="Horizontal">
 
-
                                             <TextBlock Text="Cancel" />
                                         </StackPanel>
                                     </Button>
@@ -502,7 +465,6 @@
                                         FontSize="12"
                                         Style="{DynamicResource ButtonDefault}">
                                         <StackPanel Orientation="Horizontal">
-
 
                                             <TextBlock Text="Remove selected file" />
                                         </StackPanel>
@@ -516,7 +478,6 @@
                                         Style="{DynamicResource ButtonDefault}">
                                         <StackPanel Orientation="Horizontal">
 
-
                                             <TextBlock Text="Confirm" />
                                         </StackPanel>
                                     </Button>
@@ -525,11 +486,8 @@
                         </Border>
                     </Grid>
                 </syncfusion:TabItemExt>
-
             </syncfusion:TabControlExt>
-
         </Grid>
-
 
         <!--  file succesfully/error adding/added window.  -->
         <!--
@@ -537,45 +495,27 @@
          Grid.RowSpan="4"
          Grid.ColumnSpan="4"
          Background="{DynamicResource ContentBackgroundAlt2}"
-         Visibility="Collapsed"
-         >
+         Visibility="Collapsed">
             <iconPacks:PackIconCodicons
              Width="50"
              Height="35"
              HorizontalAlignment="Center"
              VerticalAlignment="Center"
              Kind="Error"
-             Visibility="Visible"
-             />
+             Visibility="Visible" />
             <iconPacks:PackIconCodicons
              Width="50"
              Height="35"
              HorizontalAlignment="Center"
              VerticalAlignment="Center"
              Kind="Check"
-             Visibility="Visible"
-             />
+             Visibility="Visible" />
             <TextBlock
              x:Name="FileAddSuccesOrErrorTextBlock"
              Margin="0,65,0,0"
              HorizontalAlignment="Center"
              VerticalAlignment="Center"
-             Text="File(s) succesfully added!"
-             />
+             Text="File(s) succesfully added!" />
         </Grid>-->
-
-
-
-
-
-
-
-
-
-
-
-
-
     </Grid>
-
 </catel:UserControl>
