Fix : Is Processing Overlay (NEEDS ADDITIONAL TWEAKS) Detailed Problem : Present a indication to the user that the items are being processed have been processed. Fix details : An overlay bool has been added for the isproccesing overlay, but the importing and exporting happens on the main thread thus this isn't ever shown (See needs additional tweaks)

--- a/WolvenKit/Views/Editor/Tools/ImportExportView.xaml
+++ b/WolvenKit/Views/Editor/Tools/ImportExportView.xaml
@@ -384,7 +384,7 @@
             Grid.RowSpan="4"
             Grid.ColumnSpan="4"
             Background="Gray"
-            Visibility="Collapsed">
+            Visibility="{Binding IsProcessing, Converter={StaticResource boolToVisibilityConverter}}">
             <syncfusion:SfBusyIndicator AnimationType="Gear" />
             <TextBlock
                 x:Name="ImportExportOverlayText"
